--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img class="navbar-brand" src="img/logo3.png">
 
     <!--NavBar -->
-    <nav  class="navbar navbar-expand-sm navbar-expand-md-d-inline navbar-light bg-warning rounded ">
+    <nav  class="navbar navbar-expand-md navbar-light bg-warning rounded ">
         <!--Menu Hamburguer -->
         <button  class="navbar-toggler " data-toggle="collapse" data-target="#navegacao">
             <span class="navbar-toggler-icon"></span>
