--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html lang="pt-br">
   <head>
 
@@ -19,7 +19,7 @@
     <img class="navbar-brand" src="img/logo3.png">
 
     <!--NavBar -->
-    <nav  class="navbar navbar-expand-md navbar-light bg-warning rounded ">
+    <nav  class="navbar navbar-expand-lg   navbar-light bg-warning rounded ">
         <!--Menu Hamburguer -->
         <button  class="navbar-toggler " data-toggle="collapse" data-target="#navegacao">
             <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
 
         <!--Navegação -->
         <div  class="collapse navbar-collapse" id="navegacao">
-            <ul class="navbar-nav ml-auto mr-auto  ">
+            <ul class="navbar-nav  ml-auto mr-auto   ">
                 <li class="nav-item ">
                     <a  href="" class="nav-link text-dark ml-3 border rounded bg-light ">Home</a>
                 </li>
@@ -35,21 +35,145 @@
                     <a href="" class="nav-link text-dark ml-3 border rounded bg-light">Planos</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link text-dark  ml-3 border rounded bg-light">Criação de Sites</a>
+                    <a href="" class="nav-link  text-dark  ml-3 border rounded bg-light">Criação de Sites</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link text-dark  ml-3 border rounded bg-light">Gestão de Mídias Sociais</a>
+                    <a href="" class="nav-link  text-dark  ml-3 border rounded bg-light">Gestão de Mídias Sociais</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link text-dark  ml-3 border rounded bg-light">Contatos</a>
+                    <a href="" class="nav-link  text-dark  ml-3 border rounded bg-light">Contatos</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link text-dark  ml-3 border rounded bg-light">F.A.Q</a>
+                    <a href="" class="nav-link  text-dark  ml-3 border rounded bg-light">F.A.Q</a>
                 </li>
             </ul>
         </div>
 
     </nav>
+
+    <img class="bg-light" src="img/capa.png">
+
+  <h1 class="ml-3">Nossos Serviços</h1>
+
+    <table class="table table-bordered table-light w-75 ml-auto mr-auto mt-5">
+      <thead>
+        <tr>
+          <th>Serviços</th>
+          <th>Plano Basico</th>
+          <th>Plano Top</th>
+          <th>Plano Pro</th>
+          <th>Plano Premium</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <td>Domínio</td>
+          <td>Sim</td>
+          <td>Sim</td>
+          <td>Sim</td>
+          <td>Sim</td>
+        </tr>
+        <tr>
+          <td>Hospedagem</td>
+          <td>Sim</td>
+          <td>Sim</td>
+          <td>Sim</td>
+          <td>Sim</td>
+        </tr>
+
+        <tr>
+          <td>E-mail</td>
+          <td>Sim</td>
+          <td>Sim</td>
+          <td>Sim</td>
+          <td>Sim</td>
+        </tr>
+
+        <tr>
+          <td>Campanhas de Marketing</td>
+          <td>Não</td>
+          <td>Sim</td>
+          <td>Sim</td>
+          <td>Sim</td>
+        </tr>
+
+        <tr>
+          <td>Midías Sociais</td>
+          <td>Não</td>
+          <td>Não</td>
+          <td>Sim</td>
+          <td>Sim</td>
+        </tr>
+
+        <tr>
+          <td>Leads</td>
+          <td>Não</td>
+          <td>Não</td>
+          <td>Sim</td>
+          <td>Sim</td>
+        </tr>
+
+        <tr>
+          <td>Google Analytics</td>
+          <td>Não</td>
+          <td>Não</td>
+          <td>Sim</td>
+          <td>Sim</td>
+        </tr>
+
+        <tr>
+          <td>Responsivo</td>
+          <td>Não</td>
+          <td>Sim/td>
+          <td>Sim</td>
+          <td>Sim</td>
+        </tr>
+
+        <tr>
+          <td>Layout Personalizados</td>
+          <td>Não</td>
+          <td>Não</td>
+          <td>Sim</td>
+          <td>Sim</td>
+        </tr>
+
+        <tr>
+          <td>Nº de Páginas</td>
+          <td>Até 10</td>
+          <td>Até 30</td>
+          <td>Até 50</td>
+          <td>Personalizável</td>
+        </tr>
+
+
+
+        <tr>
+          <td>Suporte Técnico</td>
+          <td>Sim</td>
+          <td>Sim</td>
+          <td>Sim</td>
+          <td>Sim</td>
+        </tr>
+
+        <tr>
+          <td>Periodo</td>
+          <td>Trimestral</td>
+          <td>Trimestral</td>
+          <td>Trimestral</td>
+          <td>Trimestral</td>
+        </tr>
+
+        <tr>
+          <td>Investimento</td>
+          <td>R$199,90</td>
+          <td>R$249,90</td>
+          <td>R$499,90</td>
+          <td>R$990,90</td>
+        </tr>
+      </tbody>
+
+    </table>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
