--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     </nav>
 
-    <img class=" img  img-fluid rounded mx-auto d-block mb-5" src="img/capa3.jpeg">
+    <img class=" img  img-fluid rounded mx-auto d-block mb-5" src="img/capa.jpeg">
     
     <!--Card imagem e texto -->
     <div class="card mb-2 ">
